Eliminado el uso de sleep al esperar seniales que era totalmente erroneo, avanzado con la concurrencia de asientos bastante

--- a/tp/ConcuCalecita/Makefile
+++ b/tp/ConcuCalecita/Makefile
@@ -95,7 +95,7 @@ fuentes_caja = $(wildcard caja/*.$(extension))
 fuentes_calesita = $(wildcard calecita/*.$(extension))
 fuentes_common = $(wildcard common/*.$(extension))
 fuentes_common += $(wildcard common/fifos/*.$(extension))
-fuentes_common += $(wildcard common/memeCompartida/*.$(extension))
+fuentes_common += $(wildcard common/memCompartida/*.$(extension))
 fuentes_common += $(wildcard common/signals/*.$(extension))
 fuentes_common += $(wildcard common/logger/*.$(extension))
 fuentes_common += $(wildcard common/exception/*.$(extension))
